--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main{
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-position: center;
+  background-size: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.overlay{
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.128);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.containers{
+  /* max-width: 800px; */
+  height: 100%;
+  margin: 0 80px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  
+ 
+}
+
+.section{
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.section-input, .section-temperature{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(37, 136, 156, 0.773);
+}
+
+.section-input>input{
+  border: 0.8px solid;
+  border-radius: 0.4rem;
+  background-color: transparent;
+  color: white;
+  padding: 0.5rem;
+  font-size: 20px;
+  font-weight: 200;
+}
+
+.section-input>input:focus{
+  outline: none;
+}
+
+.section-input>button{
+  padding: 10px 50px;
+  border: none;
+  border-radius: 0.4rem;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: white;
+}
+
+.section-input>button:hover{
+  cursor: pointer;
+  background-color: lightgreen;
+}
+
+.icon{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.icon>h3{
+  font-size: 15px;
+  font-weight: 200;
+  text-transform: capitalize;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.temperature{
+  font-size: 60px;
 }
